--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node --files src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.ts",
     "format": "prettier --write \"**/*.{js,ts,md}\"",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix"
