--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/geoip-lite": "^1.4.4",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "geoip-lite": "^1.4.9",
     "useragent": "^2.3.0"
   },
   "devDependencies": {
