Added useragent types package + testing webstorm

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/geoip-lite": "^1.4.4",
+    "@types/useragent": "^2.3.4",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
